# PassengerFlying

./: .gitignore  PI_HelloWorld1.py  README.md  main.py  main.spec  mkdocs.yml  pyproject.toml  requirements.txt  saitek_panels.py  simbrief.xml
.github/workflows/: assign_to_project.yml  todo.yml
.github/workflows_disabled/: pyinstaller_build.yml
aircraft/A319/: aircraft.py  controls.py  overhead_panel_buttons.py  overhead_panel_labels.py  overhead_panel_switches.py
docs/: index.md
lib/: aircraft.py  controls.py  nasa_xpc.py  settings.py  touchosc.py  xplane.py
src/: main.py
src/aircraft/A319/: Toliss A319.touchosc  __init__.py  aircraft.py  controls.py  debug_buttons.py  main_panel_buttons.py  main_panel_knobs.py  main_panel_labels.py  main_panel_switches.py  other_switches.py  overhead_panel_buttons.py  overhead_panel_guards.py  overhead_panel_knobs.py  overhead_panel_labels.py  overhead_panel_switches.py  pedestal_buttons.py  pedestal_knobs.py  pedestal_labels.py  pedestal_switches.py  toliss_a319.touchosc
src/aircraft/A319/main_panel/: buttons.py  knobs.py  labels.py  leds.py  switches.py
src/aircraft/A319/other/: buttons.py  labels.py  switches.py
src/aircraft/A319/overhead_panel/: buttons.py  guards.py  knobs.py  labels.py  switches.py
src/aircraft/A319/pedestal/: buttons.py  knobs.py  labels.py  sliders.py  switches.py
src/aircraft/TMB9/: hotstart_tbm9.touchosc
src/experiments/: saitek_panels.py
src/lib/: aircraft.py  controls.py  functions.py  nasa_xpc.py  settings.py  simbrief.py  touchosc.py  xplane.py
