[tool.poetry]
name = "passengerflying"
version = "0.1.0a"
description = ""
authors = ["Sander Datema <mail@sanderdatema.nl>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
packaging = "^20.4"
pyinstaller = "^3.6"
coloredlogs = "^14.0"
python-osc = "^1.7.4"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
